--- a/position-classifier/convert.ipynb
+++ b/position-classifier/convert.ipynb
@@ -10,18 +10,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\seung\\anaconda3\\envs\\DL\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "\n",
-    "from classifier.models.cnn1d import PositionClassifier"
+    "from classifier.models.cnn1d import PositionClassifier\n",
+    "\n",
+    "input_size = 4\n",
+    "output_size = 240\n",
+    "pattern_n = 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -56,38 +69,38 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model = PositionClassifier(4, 240).to(device)\n",
+    "model = PositionClassifier(input_size, output_size).to(device)\n",
     "model.eval()\n",
     "model.load_state_dict(model_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[0.6364, 0.2302, 0.5481, 0.4537],\n",
-      "         [0.0256, 0.0420, 0.0015, 0.7533],\n",
-      "         [0.3251, 0.7167, 0.5351, 0.7316],\n",
-      "         [0.4654, 0.0596, 0.5214, 0.0620],\n",
-      "         [0.4713, 0.4396, 0.3236, 0.9658]]])\n"
+      "tensor([[[0.6015, 0.7037, 0.6672, 0.3546],\n",
+      "         [0.8092, 0.5324, 0.3048, 0.1059],\n",
+      "         [0.3752, 0.3426, 0.0354, 0.4394],\n",
+      "         [0.6023, 0.1607, 0.5960, 0.6148],\n",
+      "         [0.5502, 0.0497, 0.7952, 0.9177]]])\n"
      ]
     }
    ],
    "source": [
     "from torch.utils.mobile_optimizer import optimize_for_mobile\n",
     "\n",
-    "example = torch.rand(5,4).unsqueeze(0)\n",
+    "example = torch.rand(pattern_n,input_size).unsqueeze(0)\n",
     "print(example)\n",
     "traced_script_module = torch.jit.trace(model, example)\n",
     "optimized_traced_model = optimize_for_mobile(traced_script_module)\n",
